# docs/swagger.yaml
@@ -2,22 +2,43 @@ definitions:
   controllers.audioResponse:
     properties:
       bitrate:
+        example: 160
         type: number
       codec:
+        example: AAC
         type: string
       language:
+        example: jpn
+        type: string
+    type: object
+  controllers.crew:
+    properties:
+      id:
+        example: 24310
+        type: integer
+      name:
+        example: Mitchell Amundsen
+        type: string
+      profile_url:
+        example: https://image.tmdb.org/t/p/original/zK4o3lfe6chC2qDHhxpuO1RJl2X.jpg
+        type: string
+      role:
+        example: Director
         type: string
     type: object
   controllers.errorResponse:
     properties:
       error:
+        example: media not found
         type: string
     type: object
   controllers.genre:
     properties:
       id:
+        example: 35
         type: integer
       name:
+        example: Comédie
         type: string
     type: object
   controllers.mediaFileResponse:
@@ -27,39 +48,53 @@ definitions:
           $ref: '#/definitions/controllers.audioResponse'
         type: array
       codec:
+        example: H264
         type: string
       created_at:
+        example: "2023-05-07T20:31:28.327382+02:00"
         type: string
       duration:
+        example: 1450.76
         type: number
       filename:
+        example: The Iceblade Sorcerer Shall Rule the World - S1E09.mkv
         type: string
       id:
+        example: eec1d6b7-97c9-47e9-846b-6817d0e3d4ed
         type: string
       mime_type:
+        example: video/x-matroska
         type: string
       size:
+        example: 771367779
         type: number
       subtitles:
         items:
           $ref: '#/definitions/controllers.subtitleResponse'
         type: array
       updated_at:
+        example: "2023-05-07T20:31:28.327382+02:00"
         type: string
     type: object
   controllers.mediaResponse:
     properties:
       created_at:
+        example: "2023-05-07T20:31:28.327382+02:00"
         type: string
       id:
+        example: eec1d6b7-97c9-47e9-846b-6817d0e3d4ed
         type: string
       media_type:
+        example: TvShow
         type: string
       release_date:
+        example: "2023-01-06"
         type: string
       tmdb_id:
+        example: 200777
         type: integer
       updated_at:
+        example: "2023-05-07T20:31:28.327382+02:00"
         type: string
     type: object
   controllers.movieResponse:
@@ -69,78 +104,104 @@ definitions:
           $ref: '#/definitions/controllers.person'
         type: array
       backdrop_url:
+        example: https://image.tmdb.org/t/p/original/e7FzphKs5gzoghDotAEp2FeP46u.jpg
         type: string
       crew:
         items:
-          $ref: '#/definitions/controllers.person'
+          $ref: '#/definitions/controllers.crew'
         type: array
       genres:
         items:
           $ref: '#/definitions/controllers.genre'
         type: array
       id:
+        example: 649609
         type: integer
       overview:
+        example: "Le mal ne saurait survivre une éternité sans un petit coup de pouce.\r
+          Dans cette version moderne du mythe de Dracula..."
         type: string
       poster_url:
+        example: https://image.tmdb.org/t/p/original/lm3y4RNPu4aRDePsX5CkB9ndEdQ.jpg
         type: string
       release_date:
+        example: "2023-04-07"
         type: string
       studios:
         items:
           $ref: '#/definitions/controllers.studio'
         type: array
       title:
+        example: Renfield
         type: string
       vote_average:
+        example: 7.252
         type: number
       vote_count:
+        example: 278
         type: integer
     type: object
   controllers.person:
     properties:
       character:
+        example: R.M. Renfield
         type: string
       id:
+        example: 3292
         type: integer
       name:
+        example: Nicholas Hoult
         type: string
       profile_url:
+        example: https://image.tmdb.org/t/p/original/rbyi6sOw0dGV3wJzKXDopm2h0NO.jpg
         type: string
     type: object
   controllers.studio:
     properties:
       id:
+        example: 33
         type: integer
       logo_url:
+        example: https://image.tmdb.org/t/p/original/8lvHyhjr8oUKOOy2dKXoALWKdp0.png
         type: string
       name:
+        example: Universal Pictures
         type: string
     type: object
   controllers.subtitleResponse:
     properties:
       code:
+        example: ASS
         type: string
       language:
+        example: fre
         type: string
     type: object
   controllers.tvEpisodeResponse:
     properties:
       air_date:
+        example: "2023-03-24"
         type: string
       episode_number:
+        example: 12
         type: integer
       id:
+        example: 4137463
         type: integer
       name:
+        example: Le plus puissant sorcier du monde révèle Akasha
         type: string
       overview:
+        example: Ray et ses amis volent au secours de Rebecca, qui montre des signes...
         type: string
       poster_url:
+        example: https://image.tmdb.org/t/p/original/uVqsuh8qrNX8tkQDpDF7nDZdg0w.jpg
         type: string
       season_number:
+        example: 1
         type: integer
       tv_show_id:
+        example: 200777
         type: integer
     type: object
   controllers.tvShowResponse:
@@ -150,38 +211,49 @@ definitions:
           $ref: '#/definitions/controllers.person'
         type: array
       backdrop_url:
+        example: https://image.tmdb.org/t/p/original/oL459mgvcnc3jL90K7zkfvXQu0.jpg
         type: string
       crew:
         items:
-          $ref: '#/definitions/controllers.person'
+          $ref: '#/definitions/controllers.crew'
         type: array
       genres:
         items:
           $ref: '#/definitions/controllers.genre'
         type: array
       id:
+        example: 200777
         type: integer
       next_episode:
         $ref: '#/definitions/controllers.tvEpisodeResponse'
       overview:
+        example: Ray White est un jeune homme venant d'entrer dans la populaire académie
+          de magie Arnold. En tant que...
         type: string
       poster_url:
+        example: https://image.tmdb.org/t/p/original/aiJd0oGkBhf98uEH3F3yC7O48vr.jpg
         type: string
       release_date:
+        example: "2023-01-06"
         type: string
       seasons_count:
+        example: 1
         type: integer
       status:
+        example: Ended
         type: string
       studios:
         items:
           $ref: '#/definitions/controllers.studio'
         type: array
       title:
+        example: The Iceblade Sorcerer Shall Rule the World
         type: string
       vote_average:
+        example: 6.7
         type: number
       vote_count:
+        example: 11
         type: integer
     type: object
 info:
